# sentry-iot-ids

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 001_create_alerts.sql  002_create_devices.sql
src/: main.rs
src/api/: handlers.rs  routes.rs
src/database/: alerts.rs  devices.rs  mod.rs  pool.rs
src/detection/: engine.rs  mod.rs  mqtt_topic.rs
src/ingest/: mqtt.rs
src/models/: alert.rs  device.rs  event.rs  mod.rs  policy.rs
src/rules/: mod.rs  mqtt_topic.rs
